Melhorias de segurança, adição de rate limit e logs estruturados.